procedural_macros/kontrakts/tests/ui/precondition-is-not-an-expression.rs
use kontrakts::contracts;

#[contracts]
#[precondition(struct)]
fn f() {}

fn main() {}
